--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/inih"]
 	path = external/inih
 	url = git@github.com:jtilly/inih.git
+[submodule "external/kokkos"]
+	path = external/kokkos
+	url = https://github.com/kokkos/kokkos.git
