--- a/settings/C91.ini
+++ b/settings/C91.ini
@@ -1,16 +1,16 @@
 [mesh]
-Nx=150
-Ny=50
+Nx=512
+Ny=64
 xmin=0.0
-xmax=3.0
+xmax=8.0
 ymin=0.0
 ymax=1.0
 
 [run]
-tend=15.0
+tend=200.0
 save_freq=0.1
 
-boundaries_x=periodic
+boundaries_x=reflecting
 boundaries_y=reflecting
 
 
@@ -24,14 +24,14 @@ CFL=0.1
 gamma0=1.66666667
 problem=C91
 gravity=true
-g=20.0
+g=40.0
 well_balanced_flux_at_y_bc=true
 
 [C91]
 perturbation=1.0e-3
 
 [polytrope]
-theta1=10.0
+theta1=20.0
 m1=1.0
 
 [thermal_conduction]
@@ -46,4 +46,4 @@ bc_xmax_value=10.0
 
 [viscosity]
 active=true
-mu=0.028
+mu=0.0028
