--- a/settings/tri-layer.ini
+++ b/settings/tri-layer.ini
@@ -13,9 +13,6 @@ save_freq=1.0
 boundaries_x=periodic
 boundaries_y=reflecting
 
-boundary_pressure=none
-
-
 
 [solvers]
 time_stepping=euler
@@ -25,13 +22,14 @@ CFL=0.3
 
 [physics]
 gamma0=1.66666667
-problem=H84
+problem=tri-layer
 gravity=true
 g=2.0
 well_balanced_flux_at_y_bc=true
 
-[H84]
-perturbation=1.0e-4
+[tri-layer]
+y1=0.2
+y2=0.6
 
 [polytrope]
 m1=1.0
