--- a/settings/geometry/ring_test.ini
+++ b/settings/geometry/ring_test.ini
@@ -1,6 +1,10 @@
 [mesh]
 Nx=1024
 Ny=128
+; Nx=2048
+; Ny=256
+; Nx=512
+; Ny=64
 xmin=-1.0
 xmax=3.0
 ymin=0.0
@@ -8,18 +12,19 @@ ymax=1.0
 geometry=ring
 
 [ring]
-velocity=0.333
+velocity=0.15
+rho_in=2.0
 prs_in=1.0
-rho_in=1.0
+rho_out=1.0
 prs_out=1.0
-rho_out=2.5
 scale_vel_radius=true
-init_type=1
-init_type2_radius=0.125
+init_type=2
+init_type2_radius=0.09
 
 [run]  
+; tend=10.0
 tend=5.0
-save_freq=0.025
+save_freq=0.05
 
 boundaries_x=periodic 
 boundaries_y=reflecting_ring_y
@@ -32,5 +37,5 @@ CFL=0.3
 [physics]
 gamma0=1.4
 # problem=ring_blast
-problem=ring_init
+problem=ring_kelvin-helmholtz
 
