initialisation grille carré KE & RT

--- a/settings/geometry/rayleigh_taylor.ini
+++ b/settings/geometry/rayleigh_taylor.ini
@@ -1,35 +1,31 @@
 [mesh]
-; Nx=1024
-; Ny=128
-Nx=512
-Ny=64
-xmin=-1.0
-xmax= 3.0
-ymin= 0.0
-ymax= 1.0
+Nx=128
+Ny=128
+xmin=0
+xmax=1
+ymin=0
+ymax=1
 
-geometry=ring
+geometry=cartesian
+
 [ring]
 rho_in=1.0
 rho_out=2.0
-velocity=0.01
-init_type2_radius=0.75
-
 
 [run]
-tend=12.0
-save_freq=0.0333
+tend=10.0
+save_freq=0.1
 
-boundaries_x=periodic
-boundaries_y=reflecting_ring_y
+boundaries_x=reflecting
+boundaries_y=reflecting
 
 [solvers]
 riemann_solver=hllc
 reconstruction=plm
-CFL=0.5
+CFL=0.3
 
 [physics]
 gamma0=1.4
-problem=ring_rayleigh-taylor
+problem=rayleigh-taylor
 gravity=true
-g=-0.5
+g=-0.3
