up to date / dyablo

--- a/settings/geometry/geoblast.ini
+++ b/settings/geometry/geoblast.ini
@@ -1,28 +1,36 @@
 [mesh]
-Nx=128
-Ny=128
-xmin=0.0
+Nx=300
+Ny=300
+xmin=-1.0
 xmax=1.0
-ymin=0.0
+ymin=-1.0
 ymax=1.0
-#geometry=cartesian
-#geometry=radial
-geometry=colella
+# geometry=cartesian
+geometry=radial
+# geometry=colella
 geometry_colella_param=0.1
+# mapc2p_type=center
+mapc2p_type=centroid
+# mapc2p_type=mapped
  
 [run]  
 tend=1.0
 save_freq=0.01
 
-boundaries_x=reflecting 
-boundaries_y=reflecting 
+boundaries_x=radial_reflecting  
+boundaries_y=radial_reflecting  
 
 [solvers]
-riemann_solver=hllc
+# riemann_solver=hllc
+riemann_solver=hll
+# reconstruction=pcm
 reconstruction=plm
-CFL=0.4
+CFL=0.2
+time_stepping=euler
+# time_stepping=RK2
 
 [physics]
 gamma0=1.4
 problem=blast
+# perturbation=1e-3
 
