corections des conditions aux bords

--- a/settings/mhd_sod_x.ini
+++ b/settings/mhd_sod_x.ini
@@ -1,21 +1,22 @@
 [mesh]
-Nx=800
-Ny=1
+Nx=400
+Ny=3
 xmin=0.0
 xmax=1.0
 ymin=0.0
 ymax=1.0
 
 [run]
-tend=0.1
+tend=0.10
 save_freq=0.005
 
-boundaries_x=reflecting
-boundaries_y=reflecting
+boundaries_x=absorbing
+boundaries_y=periodic
 
 [solvers]
 riemann_solver=hlld
-reconstruction=plm
+time_stepping=euler
+reconstruction=pcm
 CFL=0.8
 
 [physics]
