main GLLMHD implementation

--- a/settings/orszag_tang.ini
+++ b/settings/orszag_tang.ini
@@ -1,13 +1,13 @@
 [mesh]
-Nx=256
-Ny=256
+Nx=64
+Ny=64
 xmin= 0.0
 xmax= 1.0
 ymin= 0.0
 ymax= 1.0
 
 [run]
-tend=1.0
+tend=2.0
 save_freq=0.05
 
 boundaries_x=periodic
@@ -15,8 +15,9 @@ boundaries_y=periodic
 
 [solvers]
 riemann_solver=hlld
-reconstruction=pcm
-CFL=0.8
+reconstruction=plm
+time_stepper=RK2
+CFL=0.5
 
 [physics]
 gamma0=1.666666667
