--- a/settings/mhd_sod_y.ini
+++ b/settings/mhd_sod_y.ini
@@ -1,22 +1,23 @@
 [mesh]
 Nx=16
-Ny=64
+Ny=400
 xmin=0.0
 xmax=1.0
 ymin=0.0
 ymax=1.0
 
 [run]
-tend=0.25
-save_freq=0.01
+tend=0.10
+save_freq=0.005
 
-boundaries_x=reflecting
-boundaries_y=reflecting
+boundaries_x=periodic
+boundaries_y=absorbing
 
 [solvers]
 riemann_solver=hlld
-reconstruction=plm
-CFL=0.1
+time_stepping=euler
+reconstruction=pcm
+CFL=0.8
 
 [physics]
 gamma0=1.666666667
