--- a/settings/kelvin_helmoltz.ini
+++ b/settings/kelvin_helmoltz.ini
@@ -1,13 +1,13 @@
 [mesh]
-Nx=128
-Ny=128
+Nx=512
+Ny=512
 xmin=-0.5
 xmax= 0.5
 ymin= -0.5
 ymax= 0.5
 
 [run]
-tend=10.0
+tend=5.0
 save_freq=0.1
 
 boundaries_x=periodic
@@ -16,8 +16,8 @@ boundaries_y=periodic
 [solvers]
 riemann_solver=hlld
 reconstruction=plm
-time_stepper=RK2
-CFL=0.4
+time_stepping=RK2
+CFL=0.2
 
 [physics]
 gamma0=1.4
