--- a/settings/orszag_tang.ini
+++ b/settings/orszag_tang.ini
@@ -1,13 +1,13 @@
 [mesh]
-Nx=64
-Ny=64
+Nx=256
+Ny=256
 xmin= 0.0
 xmax= 1.0
 ymin= 0.0
 ymax= 1.0
 
 [run]
-tend=2.0
+tend=3.0
 save_freq=0.05
 
 boundaries_x=periodic
@@ -16,8 +16,8 @@ boundaries_y=periodic
 [solvers]
 riemann_solver=hlld
 reconstruction=plm
-time_stepper=RK2
-CFL=0.5
+#time_stepping=RK2
+CFL=0.1
 
 [physics]
 gamma0=1.666666667
