init files for sun

--- a/settings/geometry/readfile_new.ini
+++ b/settings/geometry/readfile_new.ini
@@ -12,13 +12,15 @@ geometry_colella_param=0.05
 # mapc2p_type=center
 mapc2p_type=centroid
 # mapc2p_type=mapped
+radial_radius=6.7241126339490150e+10
  
 [run]  
-tend=0.2
-save_freq=0.005
+tend=1000000.
+save_freq=50.
 multiple_outputs=false
-boundaries_x=reflecting  
-boundaries_y=reflecting  
+# multiple_outputs=true
+boundaries_x=fixed_readfile  
+boundaries_y=fixed_readfile  
 # output_filename=blast_ref
 
 [solvers]
@@ -29,8 +31,8 @@ riemann_solver=hllc
 reconstruction=grad-naive
 # reconstruction=grad-bruner
 # reconstruction=grad-bj
-# hancock=true
-CFL=0.6
+hancock=true
+CFL=0.2
 # time_stepping=RK2
 # flux_solver=godounov
 
@@ -46,7 +48,10 @@ use_pressure_gradient=false
 # gamma0=1.4
 gamma0=1.6666666666
 # problem=blast
-problem=smoothblast
-# problem=readfile
-# perturbation=1e-3
+# problem=smoothblast
+gravity=readfile
+problem=readfile
+# spline_data=/local/home/gd274458/Documents/these_prgm/background_profile/sun_test.data
+spline_data=settings/geometry/sun_test_new.data
+perturbation=1e-6
 
