add five waves solver proto

--- a/settings/orszag_tang.ini
+++ b/settings/orszag_tang.ini
@@ -14,10 +14,10 @@ boundaries_x=periodic
 boundaries_y=periodic
 
 [solvers]
-riemann_solver=hlld
+riemann_solver=fivewaves
 reconstruction=plm
 #time_stepping=RK2
-CFL=0.1
+CFL=0.05
 
 [physics]
 gamma0=1.666666667
