--- a/settings/mhd_sod_x.ini
+++ b/settings/mhd_sod_x.ini
@@ -1,24 +1,24 @@
 [mesh]
-Nx=400
-Ny=3
+Nx=100
+Ny=100
 xmin=0.0
 xmax=1.0
 ymin=0.0
 ymax=1.0
 
 [run]
-tend=0.10
+tend=0.20
 save_freq=0.005
 
 boundaries_x=absorbing
 boundaries_y=periodic
 
 [solvers]
-riemann_solver=hlld
-time_stepping=euler
-reconstruction=pcm
+riemann_solver=fivewaves
+time_stepping=RK2
+reconstruction=plm
 CFL=0.8
 
 [physics]
-gamma0=1.666666667
+gamma0=2.0
 problem=mhd_sod_x
