choix du div cleaning en paramètre

--- a/settings/orszag_tang.ini
+++ b/settings/orszag_tang.ini
@@ -16,8 +16,9 @@ boundaries_y=periodic
 [solvers]
 riemann_solver=fivewaves
 reconstruction=plm
-#time_stepping=RK2
-CFL=0.05
+time_stepping=RK2
+CFL=0.2
+div_cleaning=dedner
 
 [physics]
 gamma0=1.666666667
