fixed boundaries with spline value

--- a/settings/geometry/readfile_new.ini
+++ b/settings/geometry/readfile_new.ini
@@ -1,6 +1,6 @@
 [mesh]
-Nx=512
-Ny=512
+Nx=256
+Ny=256  
 xmin=-1.0
 xmax=1.0
 ymin=-1.0
@@ -17,11 +17,16 @@ radial_radius=6.7241126339490150e+10
 [run]  
 tend=1000000.
 save_freq=50.
-multiple_outputs=false
+# save_freq=5.
 # multiple_outputs=true
 boundaries_x=fixed_readfile  
-boundaries_y=fixed_readfile  
+boundaries_y=fixed_readfile
+reflective_flux=true
+reflective_flux_wb=true
+fixed_spline_boundaries=true
+output_path=test 
 # output_filename=blast_ref
+# restart_file=test/run_0018.h5
 
 [solvers]
 riemann_solver=hllc
