add powell terms and no div cleaning option

--- a/settings/orszag_tang.ini
+++ b/settings/orszag_tang.ini
@@ -1,6 +1,6 @@
 [mesh]
-Nx=256
-Ny=256
+Nx=128
+Ny=128
 xmin= 0.0
 xmax= 1.0
 ymin= 0.0
@@ -17,8 +17,8 @@ boundaries_y=periodic
 riemann_solver=fivewaves
 reconstruction=plm
 time_stepping=RK2
-CFL=0.2
-div_cleaning=dedner
+CFL=0.05
+div_cleaning=none
 
 [physics]
 gamma0=1.666666667
