Add first step of Ideal GLM

--- a/settings/orszag_tang.ini
+++ b/settings/orszag_tang.ini
@@ -14,9 +14,9 @@ boundaries_x=periodic
 boundaries_y=periodic
 
 [solvers]
-riemann_solver=fivewaves
-reconstruction=plm
-time_stepping=RK2
+riemann_solver=idealGLM
+reconstruction=pcm
+time_stepping=euler
 CFL=0.1
 div_cleaning=none
 
