simplify code with vectors and make special FluxKepec function

--- a/settings/mhd_sod_x.ini
+++ b/settings/mhd_sod_x.ini
@@ -14,9 +14,9 @@ boundaries_x=absorbing
 boundaries_y=periodic
 
 [solvers]
-riemann_solver=fivewaves
-time_stepping=RK2
-reconstruction=plm
+riemann_solver=idealGLM
+time_stepping=euler
+reconstruction=pcm
 CFL=0.8
 
 [physics]
