--- a/settings/orszag_tang.ini
+++ b/settings/orszag_tang.ini
@@ -1,13 +1,13 @@
 [mesh]
-Nx=128
-Ny=128
+Nx=256
+Ny=256
 xmin= 0.0
 xmax= 1.0
 ymin= 0.0
 ymax= 1.0
 
 [run]
-tend=3.0
+tend=1.5
 save_freq=0.05
 
 boundaries_x=periodic
@@ -15,8 +15,8 @@ boundaries_y=periodic
 
 [solvers]
 riemann_solver=idealGLM
-reconstruction=pcm
-time_stepping=euler
+reconstruction=plm
+time_stepping=RK2
 CFL=0.1
 div_cleaning=none
 
