Modified settings to account for new gravity

--- a/settings/C91.ini
+++ b/settings/C91.ini
@@ -1,10 +1,10 @@
 [mesh]
 Nx=512
-Ny=64
+Ny=256
 xmin=0.0
 xmax=8.0
 ymin=0.0
-ymax=1.0
+ymax=4.0
 
 [run]
 tend=200.0
@@ -23,9 +23,12 @@ CFL=0.1
 [physics]
 gamma0=1.66666667
 problem=C91
-gravity=true
-g=40.0
 well_balanced_flux_at_y_bc=true
+
+[gravity]
+mode=constant
+gx=0.0
+gy=40.0
 
 [C91]
 perturbation=1.0e-3
