--- a/settings/H84_chi1.5.ini
+++ b/settings/H84_chi1.5.ini
@@ -24,9 +24,12 @@ CFL=0.1
 [physics]
 gamma0=1.66666667
 problem=H84
-gravity=true
-g=2.0
 well_balanced_flux_at_y_bc=false
+
+[gravity]
+mode=constant
+gy=2.0
+gx=0.0
 
 [H84]
 perturbation=1.0e-4
