--- a/settings/hot_bubble.ini
+++ b/settings/hot_bubble.ini
@@ -1,6 +1,6 @@
 [mesh]
-Nx=256
-Ny=512
+Nx=128
+Ny=192
 Nghosts=3
 xmin=0.0
 xmax=1.0e6
@@ -17,7 +17,7 @@ output_filename=hot_bubble
 
 [solvers]
 riemann_solver=hllc
-reconstruction=pcm_wb
+reconstruction=weno5
 CFL=0.1
 time_stepping=RK2
 
@@ -37,3 +37,4 @@ r0=1.25e5
 p0=1.0e6
 A0=2.129425e13
 amplitude=1.0e-3
+has_bubble=true
