--- a/settings/implosion.ini
+++ b/settings/implosion.ini
@@ -10,13 +10,13 @@ ymax=0.3
 [run]
 tend=1.0
 save_freq=0.01
-boundaries_x=periodics
+boundaries_x=periodic
 boundaries_y=periodic
 output_filename=implosion
 
 [solvers]
 riemann_solver=hllc
-reconstruction=weno3
+reconstruction=weno5
 CFL=0.8
 time_stepping=RK2
 
