Improved base setup for the hot-bubble

--- a/settings/hot_bubble.ini
+++ b/settings/hot_bubble.ini
@@ -1,6 +1,6 @@
 [mesh]
-Nx=64
-Ny=64
+Nx=256
+Ny=512
 Nghosts=3
 xmin=0.0
 xmax=1.0e6
@@ -9,20 +9,21 @@ ymax=1.5e6
 
 [run]
 tend=300.0
-save_freq=1
+save_freq=1.0
 boundaries_x=periodic
 boundaries_y=periodic
 output_filename=hot_bubble
+#multiple_outputs=true
 
 [solvers]
 riemann_solver=hllc
-reconstruction=plm
+reconstruction=pcm_wb
 CFL=0.1
 time_stepping=RK2
 
 [physics]
 problem=hot_bubble
-gravity=true
+gamma=5.0/3.0
 
 [gravity]
 mode=analytical
