small fixes for compilation

--- a/settings/mhd_sod_x.ini
+++ b/settings/mhd_sod_x.ini
@@ -14,7 +14,7 @@ boundaries_x=absorbing
 boundaries_y=periodic
 
 [solvers]
-riemann_solver=idealGLM
+riemann_solver=hlld
 time_stepping=euler
 reconstruction=pcm
 CFL=0.8
