--- a/settings/orszag_tang.ini
+++ b/settings/orszag_tang.ini
@@ -15,8 +15,8 @@ boundaries_y=periodic
 
 [solvers]
 riemann_solver=idealGLM
-reconstruction=pcm
-time_stepping=euler
+reconstruction=plm
+time_stepping=RK2
 CFL=0.1
 div_cleaning=none
 
