improved visu python script to allow mhd fields

--- a/settings/field_loop_advection.ini
+++ b/settings/field_loop_advection.ini
@@ -9,16 +9,17 @@ ymax= 0.5
 [run]
 tend=3.0
 save_freq=0.05
-
+output_filename=field_loop_advection
 boundaries_x=periodic
 boundaries_y=periodic
 
 [solvers]
-riemann_solver=fivewaves
+riemann_solver=idealGLM
 reconstruction=plm
 time_stepping=RK2
-CFL=0.2
-div_cleaning=dedner
+CFL=0.1
+; div_cleaning=dedner
+GLM_scale=0.5
 
 [physics]
 gamma0=1.666666667
