--- a/settings/orszag_tang.ini
+++ b/settings/orszag_tang.ini
@@ -9,7 +9,7 @@ ymax= 1.0
 [run]
 tend=1.5
 save_freq=0.05
-
+output_filename=orszag_tang
 boundaries_x=periodic
 boundaries_y=periodic
 
@@ -17,8 +17,9 @@ boundaries_y=periodic
 riemann_solver=idealGLM
 reconstruction=plm
 time_stepping=RK2
-CFL=0.1
+CFL=0.2
 div_cleaning=none
+GLM_scale=0.5
 
 [physics]
 gamma0=1.666666667
