reorganize ini files

--- a/settings/mhd/rotated_shock_tube.ini
+++ b/settings/mhd/rotated_shock_tube.ini
@@ -2,14 +2,14 @@
 Nx=100
 Ny=100
 xmin=0.0
-xmax=1.4
+xmax=1.0
 ymin=0.0
 ymax=1.0
 
 [run]
-tend=0.15
+tend=0.20
 save_freq=0.005
-
+output_filename=rotated_shock_tube
 boundaries_x=absorbing
 boundaries_y=periodic
 
@@ -20,5 +20,5 @@ reconstruction=plm
 CFL=0.8
 
 [physics]
-gamma0=1.666667
-problem=expansion2
+gamma0=2.0
+problem=rotated_shock_tube
