--- a/settings/mhd/brio_wu2.ini
+++ b/settings/mhd/brio_wu2.ini
@@ -7,9 +7,9 @@ ymin=0.0
 ymax=1.0
 
 [run]
-tend=0.15
-save_freq=0.005
-
+tend=0.012
+save_freq=0.001
+output_filename=brio_wu2
 boundaries_x=absorbing
 boundaries_y=periodic
 
@@ -20,5 +20,5 @@ reconstruction=plm
 CFL=0.8
 
 [physics]
-gamma0=1.666667
-problem=expansion1
+gamma0=2.0
+problem=brio-wu2
