--- a/settings/mhd/dai_woodward.ini
+++ b/settings/mhd/dai_woodward.ini
@@ -1,24 +1,24 @@
 [mesh]
-Nx=128
-Ny=4
-xmin=-5.0
-xmax=5.0
+Nx=100
+Ny=100
+xmin=0.0
+xmax=1.1
 ymin=0.0
 ymax=1.0
 
 [run]
-tend=0.7
+tend=0.20
 save_freq=0.005
-
+output_filename=dai_woodward
 boundaries_x=absorbing
 boundaries_y=periodic
 
 [solvers]
-riemann_solver=hlld
+riemann_solver=fivewaves
 time_stepping=RK2
 reconstruction=plm
 CFL=0.8
 
 [physics]
-gamma0=1.666667
-problem=shu-osher
+gamma0=1.66667
+problem=dai-woodward
