--- a/settings/mhd/expansion1.ini
+++ b/settings/mhd/expansion1.ini
@@ -1,24 +1,24 @@
 [mesh]
 Nx=100
-Ny=100
+Ny=10
 xmin=0.0
-xmax=1.1
+xmax=1.4
 ymin=0.0
 ymax=1.0
 
 [run]
-tend=0.20
+tend=0.15
 save_freq=0.005
-
+output_filename=expansion1_hlld
 boundaries_x=absorbing
 boundaries_y=periodic
 
 [solvers]
-riemann_solver=fivewaves
+riemann_solver=hlld
 time_stepping=RK2
 reconstruction=plm
 CFL=0.8
 
 [physics]
-gamma0=1.66667
-problem=dai-woodward
+gamma0=1.666667
+problem=expansion1
