--- a/settings/mhd/slow_rarefaction.ini
+++ b/settings/mhd/slow_rarefaction.ini
@@ -1,6 +1,6 @@
 [mesh]
-Nx=256
-Ny=16
+Nx=100
+Ny=10
 xmin=0.0
 xmax=1.0
 ymin=0.0
@@ -9,16 +9,16 @@ ymax=1.0
 [run]
 tend=0.20
 save_freq=0.005
-
+output_filename=slow_rarefaction
 boundaries_x=absorbing
 boundaries_y=periodic
 
 [solvers]
-riemann_solver=idealGLM
-time_stepping=euler
-reconstruction=pcm
+riemann_solver=fivewaves
+time_stepping=RK2
+reconstruction=plm
 CFL=0.8
 
 [physics]
-gamma0=2.0
-problem=mhd_sod_x
+gamma0=1.6666667
+problem=slow-rarefaction
