correct somes tests implementation

--- a/settings/mhd/brio_wu1.ini
+++ b/settings/mhd/brio_wu1.ini
@@ -1,6 +1,6 @@
 [mesh]
 Nx=256
-Ny=16
+Ny=4
 xmin=0.0
 xmax=1.0
 ymin=0.0
@@ -9,15 +9,16 @@ ymax=1.0
 [run]
 tend=0.20
 save_freq=0.005
-output_filename=mhd_sod_x
+output_filename=brio_wu1
 boundaries_x=absorbing
 boundaries_y=periodic
 
 [solvers]
 riemann_solver=idealGLM
-time_stepping=euler
-reconstruction=pcm
+time_stepping=RK2
+reconstruction=plm
 CFL=0.8
+GLM_scale=0.0
 
 [physics]
 gamma0=2.0
