correction pression hydro pout pour hydrostatique

--- a/settings/mhd/artificial_non_zero_divB.ini
+++ b/settings/mhd/artificial_non_zero_divB.ini
@@ -10,7 +10,7 @@ ymax=1.0
 tend=5.0
 save_freq=0.1
 output_filename=articifial_non_zero_divB
-boundaries_x=absorbing
+boundaries_x=periodic
 boundaries_y=periodic
 
 [solvers]
