--- a/settings/mhd/dai_woodward.ini
+++ b/settings/mhd/dai_woodward.ini
@@ -8,13 +8,13 @@ ymax=1.0
 
 [run]
 tend=0.20
-save_freq=0.005
+save_freq=0.01
 output_filename=dai_woodward
 boundaries_x=absorbing
 boundaries_y=periodic
 
 [solvers]
-riemann_solver=fivewaves
+riemann_solver=idealGLM
 time_stepping=RK2
 reconstruction=plm
 CFL=0.8
