correct some ini files

--- a/settings/mhd/rotated_shock_tube.ini
+++ b/settings/mhd/rotated_shock_tube.ini
@@ -1,13 +1,13 @@
 [mesh]
-Nx=100
-Ny=100
+Nx=256
+Ny=256
 xmin=0.0
 xmax=1.0
 ymin=0.0
 ymax=1.0
 
 [run]
-tend=0.20
+tend=0.03
 save_freq=0.005
 output_filename=rotated_shock_tube
 boundaries_x=absorbing
@@ -20,5 +20,5 @@ reconstruction=plm
 CFL=0.8
 
 [physics]
-gamma0=2.0
+gamma0=1.66666667
 problem=rotated_shock_tube
