--- a/settings/mhd/orszag_tang.ini
+++ b/settings/mhd/orszag_tang.ini
@@ -7,19 +7,21 @@ ymin= 0.0
 ymax= 1.0
 
 [run]
-tend=1.5
+tend=1.0
 save_freq=0.05
 output_filename=orszag_tang
 boundaries_x=periodic
 boundaries_y=periodic
 
 [solvers]
-riemann_solver=idealGLM
+riemann_solver=fivewaves
 reconstruction=plm
 time_stepping=RK2
+multiple_outputs=true
+; restart_file=run.h5
 CFL=0.2
 div_cleaning=none
-GLM_scale=0.5
+; GLM_scale=0.5
 
 [physics]
 gamma0=1.666666667
