--- a/settings/setup.ini
+++ b/settings/setup.ini
@@ -7,22 +7,25 @@ ymin=0.0
 ymax=13.6820142565237
 
 [run]
-tend=2500.0
+tend=2600.0
 save_freq=10
-
+restart_file=run_0025.h5
+restart_mhd_from_hydro=true
+multiple_outputs=true
 boundaries_x=reflecting
 boundaries_y=absorbing
 
 
 [solvers]
 time_stepping=RK2
-riemann_solver=hllc
+riemann_solver=fivewaves
+;div_cleaning=dedner
 reconstruction=plm
 CFL=0.3
 
 [physics]
 gamma0=1.66666667
-problem=iso-thermal-triple
+problem=restart_iso3
 well_balanced_flux_at_y_bc=true
 
 [gravity]
@@ -43,6 +46,8 @@ m2=4.0
 rho0=100
 T0=1.0
 perturbation=1e-4
+bx=0.0
+by=0.001
 
 [heating]
 active=true
