fix indentation for if statement

--- a/settings/setup.ini
+++ b/settings/setup.ini
@@ -9,8 +9,8 @@ ymax=13.6820142565237
 [run]
 tend=2600.0
 save_freq=10
-restart_file=run_0025.h5
-restart_mhd_from_hydro=true
+;restart_file=run_0025.h5
+;restart_mhd_from_hydro=true
 multiple_outputs=true
 boundaries_x=reflecting
 boundaries_y=absorbing
@@ -18,14 +18,15 @@ boundaries_y=absorbing
 
 [solvers]
 time_stepping=RK2
-riemann_solver=fivewaves
+riemann_solver=hlld
 ;div_cleaning=dedner
 reconstruction=plm
 CFL=0.3
 
 [physics]
 gamma0=1.66666667
-problem=restart_iso3
+;problem=restart_iso3
+problem=iso-thermal-triple
 well_balanced_flux_at_y_bc=true
 
 [gravity]
@@ -46,8 +47,8 @@ m2=4.0
 rho0=100
 T0=1.0
 perturbation=1e-4
-bx=0.0
-by=0.001
+;bx=0.0
+;by=0.001
 
 [heating]
 active=true
