fix hydro pressure in fivewaves and add restart_ini file

--- a/settings/restart_mhd_tri_layer.ini
+++ b/settings/restart_mhd_tri_layer.ini
@@ -7,12 +7,12 @@ ymin=0.0
 ymax=13.6820142565237
 
 [run]
-tend=2500.0
+tend=5000.0
 save_freq=50
-;restart_file=run_0025.h5
-;restart_mhd_from_hydro=true
+restart_file=/local/home/lb281911/runs/THREE_LAYER/run_0025.h5
+restart_mhd_from_hydro=true
 multiple_outputs=true
-output_filename=test_fivewaves
+output_filename=fivewaves_MHD
 boundaries_x=reflecting
 boundaries_y=absorbing
 
@@ -26,8 +26,7 @@ CFL=0.3
 
 [physics]
 gamma0=1.66666667
-;problem=restart_iso3
-problem=iso-thermal-triple
+problem=restart_iso3
 well_balanced_flux_at_y_bc=true
 
 [gravity]
@@ -48,8 +47,8 @@ m2=4.0
 rho0=100
 T0=1.0
 perturbation=1e-4
-;bx=0.0
-;by=0.001
+bx=0.0
+by=0.0287
 
 [heating]
 active=true
