--- a/settings/restart_mhd_tri_layer.ini
+++ b/settings/restart_mhd_tri_layer.ini
@@ -8,12 +8,12 @@ ymax=13.6820142565237
 
 [run]
 tend=5000.0
-save_freq=50
+save_freq=10
 restart_file=/local/home/lb281911/runs/THREE_LAYER/run_0025.h5
 restart_mhd_from_hydro=true
 multiple_outputs=true
 output_filename=fivewaves_MHD
-boundaries_x=reflecting
+boundaries_x=periodic
 boundaries_y=absorbing
 
 
