--- a/settings/setup.ini
+++ b/settings/setup.ini
@@ -13,7 +13,7 @@ save_freq=50
 ;restart_mhd_from_hydro=true
 multiple_outputs=true
 output_filename=test_fivewaves
-boundaries_x=reflecting
+boundaries_x=periodic
 boundaries_y=absorbing
 
 
