correct and improve Magnetic Boundary Conditions

--- a/settings/restart_mhd_tri_layer.ini
+++ b/settings/restart_mhd_tri_layer.ini
@@ -48,7 +48,13 @@ rho0=100
 T0=1.0
 perturbation=1e-4
 bx=0.0
-by=0.0287
+by=0.00287
+
+[magnetic_boundary]
+bcmag_ymin=normal_field
+bcmag_ymax=normal_field
+bcmag_ymin_value=0.00287
+bcmag_ymax_value=0.00287
 
 [heating]
 active=true
