reduce initial velocity and correct BC for shear problem

--- a/settings/mhd/shearB.ini
+++ b/settings/mhd/shearB.ini
@@ -7,11 +7,15 @@ ymin= 0.0
 ymax= 1.0
 
 [run]
-tend=5.0
-save_freq=0.1
+tend=7.0
+save_freq=0.01
 output_filename=shearB
 boundaries_x=periodic
 boundaries_y=absorbing
+
+[magnetic_boundary]
+bcmag_ymin=normal_field
+bcmag_ymax=normal_field
 
 [misc]
 log_frequency=10
