--- a/settings/mhd/shearB.ini
+++ b/settings/mhd/shearB.ini
@@ -1,6 +1,6 @@
 [mesh]
-Nx=64
-Ny=64
+Nx=128
+Ny=128
 xmin= 0.0
 xmax= 1.0
 ymin= 0.0
@@ -21,7 +21,7 @@ bcmag_ymax=normal_field
 log_frequency=10
 
 [solvers]
-riemann_solver=fivewaves
+riemann_solver=idealGLM
 reconstruction=plm
 time_stepping=RK2
 multiple_outputs=true
