introduce flux séparation

--- a/settings/mhd/shearB.ini
+++ b/settings/mhd/shearB.ini
@@ -5,7 +5,7 @@ xmin= 0.0
 xmax= 1.0
 ymin= 0.0
 ymax= 1.0
-write_ghost_cells=true
+; write_ghost_cells=true
 
 [run]
 tend=1.0
@@ -22,7 +22,7 @@ bcmag_ymax=normal_field
 log_frequency=10
 
 [solvers]
-riemann_solver=idealGLM
+riemann_solver=fivewaves
 reconstruction=plm
 time_stepping=RK2
 multiple_outputs=true
