--- a/settings/mhd/shearB.ini
+++ b/settings/mhd/shearB.ini
@@ -12,6 +12,8 @@ save_freq=0.1
 output_filename=shearB
 boundaries_x=periodic
 boundaries_y=absorbing
+magnetic_boundary_x=same_as_hydro
+magnetic_boundary_y=normal_field
 
 [misc]
 log_frequency=10
