update siminfo and iomanager

--- a/settings/restart_mhd_tri_layer.ini
+++ b/settings/restart_mhd_tri_layer.ini
@@ -51,10 +51,9 @@ bx=0.0
 by=0.00287
 
 [magnetic_boundary]
-bcmag_ymin=normal_field
-bcmag_ymax=normal_field
-bcmag_ymin_value=0.00287
-bcmag_ymax_value=0.00287
+magnetic_boundary_x=same_as_hydro
+magnetic_boundary_y=normal_field
+
 
 [heating]
 active=true
