--- a/settings/mhd/shearB.ini
+++ b/settings/mhd/shearB.ini
@@ -15,8 +15,8 @@ boundaries_x=periodic
 boundaries_y=absorbing
 
 [magnetic_boundary]
-bcmag_ymin=normal_field
-bcmag_ymax=normal_field
+magnetic_boundary_x=same_as_hydro
+magnetic_boundary_y=normal_field
 
 [misc]
 log_frequency=10
