--- a/settings/mhd/shearB.ini
+++ b/settings/mhd/shearB.ini
@@ -5,10 +5,10 @@ xmin= 0.0
 xmax= 1.0
 ymin= 0.0
 ymax= 1.0
-; write_ghost_cells=true
+write_ghost_cells=true
 
 [run]
-tend=1.0
+tend=3.0
 save_freq=0.01
 output_filename=shearB
 boundaries_x=periodic
