Adapts ini files to new gravity config and other minor changes in ini sections

--- a/settings/C91.ini
+++ b/settings/C91.ini
@@ -30,7 +30,7 @@ mode=constant
 gx=0.0
 gy=40.0
 
-[C91]
+[c91]
 perturbation=1.0e-3
 
 [polytrope]
@@ -41,11 +41,11 @@ m1=1.0
 active=true
 kappa=0.07
 
-bc_xmin=fixed_temperature
-bc_xmax=fixed_gradient
+bc_ymin=fixed_temperature
+bc_ymax=fixed_gradient
 
-bc_xmin_value=1.0
-bc_xmax_value=20.0
+bc_ymin_value=1.0
+bc_ymax_value=20.0
 
 [viscosity]
 active=true
