Sets boundaries to reflective and changes the shape of the domain

--- a/settings/mhd/shearB.ini
+++ b/settings/mhd/shearB.ini
@@ -1,18 +1,18 @@
 [mesh]
-Nx=64
-Ny=64
+Nx=32
+Ny=128
 xmin= 0.0
 xmax= 1.0
 ymin= 0.0
 ymax= 1.0
-write_ghost_cells=true
+write_ghost_cells=false
 
 [run]
-tend=1.5
+tend=2.0
 save_freq=0.1
 output_filename=shearB
 boundaries_x=periodic
-boundaries_y=absorbing
+boundaries_y=reflecting
 magnetic_boundary_x=same_as_hydro
 magnetic_boundary_y=normal_field
 
