[Enhance] Fix Cppcheck - A tool for static C/C++ code analysis
Syntax:
    cppcheck [OPTIONS] [files or paths]

If a directory is given instead of a filename, *.cpp, *.cxx, *.cc, *.c++, *.c, *.ipp,
*.ixx, *.tpp, and *.txx files are checked recursively from the given directory.

Options:
    --addon=<addon>
                         Execute addon. i.e. --addon=misra. If options must be
                         provided a json configuration is needed.
    --addon-python=<python interpreter>
                         You can specify the python interpreter either in the
                         addon json files or through this command line option.
                         If not present, Cppcheck will try "python3" first and
                         then "python".
    --cppcheck-build-dir=<dir>
                         Cppcheck work folder. Advantages:
                          * whole program analysis
                          * faster analysis; Cppcheck will reuse the results if
                            the hash for a file is unchanged.
                          * some useful debug information, i.e. commands used to
                            execute clang/clang-tidy/addons.
    --check-config       Check cppcheck configuration. The normal code
                         analysis is disabled by this flag.
    --check-level=<level>
                         Configure how much valueflow analysis you want:
                          * reduced: Reduce valueflow to finish checking quickly.
                          * normal: Cppcheck uses some compromises in the analysis so
                            the checking will finish in reasonable time.
                          * exhaustive: deeper analysis that you choose when you can
                            wait.
                         The default choice is 'normal'.
    --check-library      Show information messages when library files have
                         incomplete info.
    --checkers-report=<file>
             

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -82,7 +82,7 @@ repos:
     # - id: cpplint
     #   args: [--counting=detailed, --exclude=test/*]           # linter (or style-error checker) for Google C++ Style Guide
     - id: cppcheck             # static analyzer for C/C++ code
-      args: [--enable=all, --inconclusive, --std=c++20, --language=c++, --suppress=missingIncludeSystem, --suppress=missingInclude, --check-level=exhaustive]
+      args: [--enable=all, --inconclusive, --std=c++20, --language=c++, --suppress=missingIncludeSystem, --suppress=missingInclude, --check-level=exhaustive, --inline-suppr]
   # Hooks using native
   # - id: clang-format         # formatter for C/C++ code based on a style guide
 
