--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -133,12 +133,12 @@ repos:
 # ==============================================================================
 # Configuration files
 # ==============================================================================
-- repo: https://github.com/neutrinoceros/inifix.git
-  rev: v6.1.1
-  hooks:
-  - id: inifix-validate
-  - id: inifix-format
-    args: [--skip-validation]
+# - repo: https://github.com/neutrinoceros/inifix.git
+#   rev: v6.1.1
+#   hooks:
+#   - id: inifix-validate
+#   - id: inifix-format
+#     args: [--skip-validation]
 
 # - repo: local
 #   hooks:
